[gd_scene load_steps=9 format=3 uid="uid://s7151rjlrorf"]

[ext_resource type="Script" path="res://current_time.gd" id="1_geju7"]
[ext_resource type="Script" path="res://current_state.gd" id="2_1t0tp"]
[ext_resource type="Script" path="res://time_left.gd" id="3_ubwit"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1cqo"]
bg_color = Color(0.968627, 0.85098, 0.698039, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.613281, 0.277706, 0.222794, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06l4r"]
bg_color = Color(0.78125, 0.583649, 0.32959, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8125, 0.242451, 0.14917, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_72ygu"]
bg_color = Color(0.96875, 0.851204, 0.700073, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8125, 0.242451, 0.14917, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="SystemFont" id="SystemFont_o17a5"]
font_italic = true

[sub_resource type="Theme" id="Theme_4uw3v"]
default_font = SubResource("SystemFont_o17a5")
default_font_size = 24
Button/colors/font_color = Color(0.480469, 0.309736, 0.172668, 1)
Button/colors/font_focus_color = Color(0.482353, 0.309804, 0.172549, 1)
Button/styles/normal = SubResource("StyleBoxFlat_k1cqo")
Button/styles/pressed = SubResource("StyleBoxFlat_k1cqo")
Label/colors/font_color = Color(0.482353, 0.309804, 0.172549, 1)
Label/styles/normal = SubResource("StyleBoxFlat_k1cqo")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_06l4r")
TextEdit/colors/font_color = Color(0.482353, 0.309804, 0.172549, 1)
TextEdit/styles/normal = SubResource("StyleBoxFlat_72ygu")

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4uw3v")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="CurrentTime" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Time..."
horizontal_alignment = 1
script = ExtResource("1_geju7")

[node name="CurrentState" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "TomamoTiming..."
horizontal_alignment = 1
script = ExtResource("2_1t0tp")

[node name="TimeLeft" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Time...
"
horizontal_alignment = 1
script = ExtResource("3_ubwit")

[node name="TextEdit" type="TextEdit" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Task Listing..."

[node name="StartButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="StopButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Stop
"

[node name="Timer" type="Timer" parent="PanelContainer/VBoxContainer"]
autostart = true

[node name="WorkOrLongRestTimer" type="Timer" parent="PanelContainer/VBoxContainer"]
wait_time = 1800.0
one_shot = true

[node name="RestTimer" type="Timer" parent="PanelContainer/VBoxContainer"]
wait_time = 300.0
one_shot = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/StartButton" to="PanelContainer/VBoxContainer/CurrentState" method="_on_start_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/StopButton" to="PanelContainer/VBoxContainer/CurrentState" method="_on_stop_button_pressed"]
[connection signal="timeout" from="PanelContainer/VBoxContainer/Timer" to="PanelContainer/VBoxContainer/CurrentTime" method="_on_timer_timeout"]
[connection signal="timeout" from="PanelContainer/VBoxContainer/Timer" to="PanelContainer/VBoxContainer/CurrentState" method="_on_timer_timeout"]
[connection signal="timeout" from="PanelContainer/VBoxContainer/Timer" to="PanelContainer/VBoxContainer/TimeLeft" method="_on_timer_timeout"]
[connection signal="timeout" from="PanelContainer/VBoxContainer/WorkOrLongRestTimer" to="PanelContainer/VBoxContainer/CurrentState" method="_on_big_timer_timeout"]
[connection signal="timeout" from="PanelContainer/VBoxContainer/RestTimer" to="PanelContainer/VBoxContainer/CurrentState" method="_on_s_timer_timeout"]
